--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ea_blogs?createDatabaseIfNotExist=true
-spring.datasource.username=Admin
-spring.datasource.password=123
+spring.datasource.username=root
+spring.datasource.password=
+server.port=1001
